add users list endpoint
